# areg-sdk

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .jscpd.json  09a-areg-sdk-tools-general.md  CLA.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE.txt  License.txt  Makefile  POSIX.md  README.md  REUSE.toml  Releases.md  Releases.txt  ServiceInterface.md  WIN32.md  Win32.md  areg-sdk.sln  areg.cmake  areg_modernization_plan.md  areg_rename_plan.md  areg_rename_plan_v2.md  config_compile.props  config_project.props  config_project_default.props  config_user.props  msvc_setup.props  nuget.config
examples/: CMakeLists.txt  Makefile  README.md  dummy.vcxproj  dummy.vcxproj.filters  examples_generate.bat
examples/00_helloservice/: 00_clientproc.vcxproj  00_clientproc.vcxproj.filters  00_generated.vcxproj  00_generated.vcxproj.filters  00_onethread.vcxproj  00_onethread.vcxproj.filters  00_serviceproc.vcxproj  00_serviceproc.vcxproj.filters  00_twothreads.vcxproj  00_twothreads.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/00_helloworld/: 00_clientproc.vcxproj.filters  00_generated.vcxproj  00_serviceproc.vcxproj  Makefile  ReadMe.txt
examples/01-hello/: .cproject  .project
examples/01-test/: .cproject  .project
examples/01_hello/: .cproject  .project  01_hello.vcxproj  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/01_minimalrpc/: 01_generated.vcxproj  01_generated.vcxproj.filters  01_minimalrpc.vcxproj  01_minimalrpc.vcxproj.filters  CMakeLists.txt  ReadMe.md
examples/02-shared-buffer/: .cproject  .project
examples/02_buffer/: .cproject  .project  02_buffer.vcxproj  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/02_minimalipc/: 02_consumeripc.vcxproj  02_consumeripc.vcxproj.filters  02_generated.vcxproj  02_generated.vcxproj.filters  02_provideripc.vcxproj  02_provideripc.vcxproj.filters  CMakeLists.txt  ReadMe.md
examples/03-file/: .cproject  .project  03-file.vcxproj
examples/03_file/: .cproject  .project  03_file.vcxproj  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/03_helloservice/: 03_clientproc.vcxproj  03_generated.vcxproj  03_generated.vcxproj.filters  03_onethread.vcxproj  03_serviceproc.vcxproj  03_serviceproc.vcxproj.filters  03_twothreads.vcxproj  CMakeLists.txt  ReadMe.md
examples/04_hellothread/: 04_hellothread.vcxproj  CMakeLists.txt  ReadMe.md
examples/04_logging/: 04_logging.vcxproj  04_logging.vcxproj.filters  CMakeLists.txt  ReadMe.md
examples/04_trace/: .cproject  .gitignore  .project  04_trace.vcxproj  04_trace.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/05_buffer/: 05_buffer.vcxproj  CMakeLists.txt  ReadMe.md
examples/05_timer/: .cproject  .project  05_timer.vcxproj  05_timer.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/06_file/: 06_file.vcxproj  CMakeLists.txt  ReadMe.md
examples/06_synch/: .cproject  .project  06_synch.vcxproj
examples/06_threads/: .cproject  .project  06_threads.vcxproj  06_threads.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/07_logging/: 07_logging.vcxproj  CMakeLists.txt  ReadMe.md
examples/07_synch/: .cproject  .project  07_synch.vcxproj  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/07_threads/: .cproject  .project  07_threads.vcxproj
examples/08_service/: .cproject  .project  08_service.vcxproj  08_service.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/08_timer/: 08_timer.vcxproj  CMakeLists.txt  ReadMe.md
examples/09_duplicate/: .cproject  .project  09_duplicate.vcxproj  ReadMe.txt
examples/09_svcmulti/: .cproject  .project  09_svcmulti.vcxproj  09_svcmulti.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/09_threads/: 09_threads.vcxproj  CMakeLists.txt  ReadMe.md
examples/10_locsvc/: 10_generated.vcxproj  10_generated.vcxproj.filters  10_locservice.vcxproj  10_locservice.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md
examples/10_locsvchello/: 10_generated.vcxproj.filters  10_svchello.vcxproj  10_svchello.vcxproj.filters  Makefile  ReadMe.txt
examples/10_svchello/: .cproject  .project  10_svchello.vcxproj  10_svchello.vcxproj.filters  ReadMe.txt
examples/10_sync/: 10_sync.vcxproj  CMakeLists.txt  ReadMe.md
examples/10_synch/: 10_synch.vcxproj  CMakeLists.txt  ReadMe.md
examples/11_locmesh/: 11_generated.vcxproj  11_generated.vcxproj.filters  11_localmesh.vcxproj  11_localmesh.vcxproj.filters  11_locmesh.vcxproj  11_locmesh.vcxproj.filters  11_locsvcmesh.vcxproj  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/11_locsvcmix/: 11_generated.vcxproj.filters  11_svcmix.vcxproj  11_svcmix.vcxproj.filters  Makefile  ReadMe.txt
examples/11_service/: 11_service.vcxproj  CMakeLists.txt  ReadMe.md
examples/11_svcmix/: .cproject  .project  11_svcmix.vcxproj  11_svcmix.vcxproj.filters  ReadMe.txt
examples/12_ipchello/: ReadMe.txt
examples/12_pubsvc/: 12_generated.vcxproj  12_generated.vcxproj.filters  12_pubclient.vcxproj  12_pubclient.vcxproj.filters  12_pubservice.vcxproj  12_pubservice.vcxproj.filters  CMakeLists.txt  Makefile  ReadMe.md  ReadMe.txt
examples/12_pubsvchello/: 12_generated.vcxproj  12_generated.vcxproj.filters  (+6 more)
framework/: CMakeLists.txt  Makefile  README.md  areg-extend.vcxproj  areg-extend.vcxproj.filters  areg-extensions.vcxproj  areg-extensions.vcxproj.filters  areg-service.vcxproj  areg-service.vcxproj.filters  areg.vcxproj  areg.vcxproj.filters  aregextend.vcxproj  aregextend.vcxproj.filters  areglogger.vcxproj  areglogger.vcxproj.filters  logcollector.vcxproj  logcollector.vcxproj.filters  logger.vcxproj  logger.vcxproj.filters  logobserver.vcxproj  logobserver.vcxproj.filters  logobserverapi.vcxproj  logobserverapi.vcxproj.filters  mcrouter.vcxproj  mcrouter.vcxproj.filters  mtrouter.vcxproj  mtrouter.vcxproj.filters  observerapi.vcxproj  observerapi.vcxproj.filters
tests/: CMakeLists.txt  areg-unit-tests.vcxproj  areg-unit-tests.vcxproj.filters
(+4149 files in other folders)
